--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,7 +24,7 @@ env:
 jobs:
   build-push-and-deploy:
     runs-on: ubuntu-latest
-
+    environment: dev
     steps:
       - name: Checkout
         uses: actions/checkout@v4
