--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,11 @@
+resolver 169.254.169.253 valid=10s ipv6=off;
+
+upstream backend_upstream {
+    # Re-resolve DNS for changing ECS task IPs
+    server rag-app.svc.local:3000 resolve;
+    keepalive 32;
+}
+
 server {
     listen 80;
     listen [::]:80;
@@ -43,4 +51,17 @@ server {
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
+
+    location /api/ {
+        proxy_http_version 1.1;          # needed for keepalive upstream
+        proxy_set_header Connection "";   # enable keepalive
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_read_timeout 60s;           # tune as needed
+        proxy_send_timeout 60s;
+
+        proxy_pass http://backend_upstream;
+    }
+
 }
