nginx was pointing to wrong backend upstream

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,8 @@ resolver 169.254.169.253 valid=10s ipv6=off;
 upstream backend_upstream {
     # Re-resolve DNS for changing ECS task IPs
     zone backend_upstream 64k;
-    server rag-app.svc.local:8000 resolve;
+    # <Service.Name>.<Namespace.Name>  
+    server rag-app-task.svc.local:8000 resolve;
     keepalive 32;
 }
 
