sorted name of the service discovery for internal DNS resolution. Image build uses no cache

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ upstream backend_upstream {
     # Re-resolve DNS for changing ECS task IPs
     zone backend_upstream 64k;
     # <Service.Name>.<Namespace.Name>  
-    server rag-app-task.svc.local:8000 resolve;
+    server app-service-discovery.svc.local:8000 resolve;
     keepalive 32;
 }
 
