--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-#VITE_API_URL=http://localhost:3000
+VITE_API_URL=http://localhost:8000
 # Use this if you want to point to aws
-VITE_API_URL=http://nginx-nlb-a699e1ac0026b4dd.elb.eu-west-1.amazonaws.com/api
+#VITE_API_URL=http://nginx-nlb-a699e1ac0026b4dd.elb.eu-west-1.amazonaws.com/api
