--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 VITE_API_URL=http://localhost:8000
 VITE_AUTH_URL=http://localhost:9999
+VITE_AUTH_REGISTRATION_PATH=/signup
+VITE_REFRESH_TOKEN_PATH=/token
 # Use this if you want to point to aws
 #VITE_API_URL=http://nginx-nlb-a699e1ac0026b4dd.elb.eu-west-1.amazonaws.com/api
