--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,6 @@ VITE_AUTH_REGISTRATION_PATH=/signup
 VITE_REFRESH_TOKEN_PATH=/token
 VITE_DOCUMENT_UPLOAD_PATH=/api/document/upload
 VITE_DOCUMENT_RETRIEVE_PATH=/api/document/retrieve_documents
+VITE_DOCUMENT_DELETE_PATH=/api/document/
 # Use this if you want to point to aws
 #VITE_API_URL=http://nginx-nlb-a699e1ac0026b4dd.elb.eu-west-1.amazonaws.com/api
