added modal to confirm deletion

--- a/.env.development
+++ b/.env.development
@@ -5,5 +5,6 @@ VITE_REFRESH_TOKEN_PATH=/token
 VITE_DOCUMENT_UPLOAD_PATH=/api/document/upload
 VITE_DOCUMENT_RETRIEVE_PATH=/api/document/retrieve_documents
 VITE_DOCUMENT_DELETE_PATH=/api/document/
+VITE_CHAT_DELETE_PATH=/api/chat/
 # Use this if you want to point to aws
 #VITE_API_URL=http://nginx-nlb-a699e1ac0026b4dd.elb.eu-west-1.amazonaws.com/api
